# tramits

./: .dockerignore  .env.example  .env.prod  .gitignore  AGENTS.md  INSTALL.md  README.md  RFs.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: deplo.yml  deploy.yml  migration-prod.yml  seeder-prod.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  dockerfile  go.mod  main.go
backend/src/: main.rs  migration.rs  seeder.rs  tipos.rs
backend/src/config/: auth.rs  cache.rs  cors.rs  logger.rs  mod.rs  tipos.rs
backend/src/db/: .gitignore  migration.sql  mod.rs
backend/src/http/: bodega.rs  mod.rs  municipio.rs  nucleo.rs  oficina.rs  password_recovery.rs  persona.rs  provincia.rs  tramite.rs  usuario.rs
backend/src/http/tramite/: alta.rs  baja.rs  cancelar.rs  correo.rs  estadisticas.rs  gestionar.rs  historial.rs  historial_registrador.rs  libreta.rs  mod.rs  procesar.rs
backend/src/mail/: mod.rs
backend/src/middlewares/: auth.rs  cache.rs  cors.rs  mod.rs
backend/src/models/: usuario.rs
backend/src/models/usuario/: mod.rs
backend/src/repos/: bodega.rs  mod.rs  municipio.rs  nucleo.rs  oficina.rs  persona.rs  provincia.rs  tramite.rs  usuario.rs
backend/src/repos/tramite/: alta.rs  baja.rs  cancelar.rs  gestionar.rs  historial.rs  historial_registrador.rs  libreta.rs  mod.rs  procesar.rs
frontend/: .dockerignore  Dockerfile  default.conf  dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  Dashboard.vue  Login.vue  Register.vue  Ruta.vue  main.ts  style.css
(+48 files in other folders)
