[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
fake = { version = "4.4.0" }
rand = "0.9.2"
serde = "1.0.228"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
serde_json = "1.0.149"
argon2 = "0.5.3"
uuid = {version = "1.21.0", features = ["v4", "serde"]}